--- a/pandas_agent.ipynb
+++ b/pandas_agent.ipynb
@@ -133,8 +133,8 @@
        "</div>"
       ],
       "text/plain": [
-       "      CRIM    ZN  INDUS  CHAS    NOX     RM   AGE     DIS  RAD    TAX   \n",
-       "0  0.00632  18.0   2.31     0  0.538  6.575  65.2  4.0900    1  296.0  \\\n",
+       "      CRIM    ZN  INDUS  CHAS    NOX     RM   AGE     DIS  RAD    TAX  \\\n",
+       "0  0.00632  18.0   2.31     0  0.538  6.575  65.2  4.0900    1  296.0   \n",
        "1  0.02731   0.0   7.07     0  0.469  6.421  78.9  4.9671    2  242.0   \n",
        "2  0.02729   0.0   7.07     0  0.469  7.185  61.1  4.9671    2  242.0   \n",
        "3  0.03237   0.0   2.18     0  0.458  6.998  45.8  6.0622    3  222.0   \n",
@@ -155,10 +155,10 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "load_dotenv()\n",
-    "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n",
+    "from langchain.callbacks import get_openai_callback\n",
+    "from langchain.agents import create_pandas_dataframe_agent\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.chat_models import ChatOpenAI\n",
     "\n",
     "column_names = ['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'RAD', 'TAX', 'PTRATIO', 'B', 'LSTAT', 'MEDV']\n",
     "data = pd.read_csv('./housing.csv', header=None, delimiter=r\"\\s+\", names=column_names)\n",
@@ -172,12 +172,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.agents import create_pandas_dataframe_agent\n",
-    "from langchain.llms import OpenAI\n",
-    "from langchain.chat_models import ChatOpenAI\n",
+    "agent = create_pandas_dataframe_agent(OpenAI(temperature=0), data, verbose=True)\n",
+    "# agent = create_pandas_dataframe_agent(ChatOpenAI(temperature=0, openai_api_key=OPENAI_API_KEY, model_name='gpt-3.5-turbo'), data, verbose=True)\n",
     "\n",
-    "agent = create_pandas_dataframe_agent(OpenAI(temperature=0, openai_api_key=OPENAI_API_KEY), data, verbose=True)\n",
-    "# agent = create_pandas_dataframe_agent(ChatOpenAI(temperature=0, openai_api_key=OPENAI_API_KEY, model_name='gpt-3.5-turbo'), data, verbose=True)"
+    "def ask_agent(agent, question):\n",
+    "    with get_openai_callback() as cb:\n",
+    "        response = agent.run(question)\n",
+    "        print(f\"Answer: {response}\\n\")\n",
+    "        print(f\"Total Tokens: {cb.total_tokens}\")\n",
+    "        print(f\"Prompt Tokens: {cb.prompt_tokens}\")\n",
+    "        print(f\"Completion Tokens: {cb.completion_tokens}\")\n",
+    "        print(f\"Successful Requests: {cb.successful_requests}\")\n",
+    "        print(f\"Total Cost (USD): ${cb.total_cost}\")\n",
+    "    return response"
    ]
   },
   {
@@ -199,7 +206,14 @@
       "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
       "Final Answer: There are 506 rows in the dataframe.\u001b[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Answer: There are 506 rows in the dataframe.\n",
+      "\n",
+      "Total Tokens: 1406\n",
+      "Prompt Tokens: 1353\n",
+      "Completion Tokens: 53\n",
+      "Successful Requests: 2\n",
+      "Total Cost (USD): $0.02812\n"
      ]
     },
     {
@@ -214,7 +228,7 @@
     }
    ],
    "source": [
-    "agent.run(\"how many rows are there?\")"
+    "ask_agent(agent, \"how many rows are there?\")"
    ]
   },
   {
@@ -237,15 +251,22 @@
       "Thought:\u001b[32;1m\u001b[1;3m 我需要找到CRIM列中最小值对应的town\n",
       "Action: python_repl_ast\n",
       "Action Input: df[df['CRIM'] == df['CRIM'].min()]\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m      CRIM    ZN  INDUS  CHAS    NOX     RM   AGE   DIS  RAD    TAX  PTRATIO   \n",
-      "0  0.00632  18.0   2.31     0  0.538  6.575  65.2  4.09    1  296.0     15.3  \\\n",
+      "Observation: \u001b[36;1m\u001b[1;3m      CRIM    ZN  INDUS  CHAS    NOX     RM   AGE   DIS  RAD    TAX  PTRATIO  \\\n",
+      "0  0.00632  18.0   2.31     0  0.538  6.575  65.2  4.09    1  296.0     15.3   \n",
       "\n",
       "       B  LSTAT  MEDV  \n",
       "0  396.9   4.98  24.0  \u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3m 我现在知道最终答案\n",
       "Final Answer: town 0 犯罪率最低\u001b[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Answer: town 0 犯罪率最低\n",
+      "\n",
+      "Total Tokens: 3127\n",
+      "Prompt Tokens: 2977\n",
+      "Completion Tokens: 150\n",
+      "Successful Requests: 3\n",
+      "Total Cost (USD): $0.06254000000000001\n"
      ]
     },
     {
@@ -279,7 +300,7 @@
     "上面是每个列对应的含义. 犯罪率最低的town是哪一个?\n",
     "\"\"\"\n",
     "\n",
-    "agent.run(question)"
+    "ask_agent(agent, question)"
    ]
   },
   {
@@ -301,7 +322,7 @@
       "Thought:\u001b[32;1m\u001b[1;3m 我需要把数据放到图中\n",
       "Action: python_repl_ast\n",
       "Action Input: plt.scatter(df['CRIM'], df['MEDV'])\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m<matplotlib.collections.PathCollection object at 0x00000116761A14B0>\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m<matplotlib.collections.PathCollection object at 0x7f470722ca00>\u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3m 我需要添加标题和坐标轴标签\n",
       "Action: python_repl_ast\n",
       "Action Input: plt.title('Crime Rate vs. Median Home Value')\n",
@@ -330,15 +351,22 @@
       "\n",
       "Observation: \u001b[36;1m\u001b[1;3mNone\u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3m 我现在知道最终答案了\n",
-      "Final Answer: 我画了一个犯罪率和房价的散点图。\u001b[0m\n",
+      "Final Answer: 画出了一个犯罪率和房价的散点图。\u001b[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Answer: 画出了一个犯罪率和房价的散点图。\n",
+      "\n",
+      "Total Tokens: 4416\n",
+      "Prompt Tokens: 4132\n",
+      "Completion Tokens: 284\n",
+      "Successful Requests: 5\n",
+      "Total Cost (USD): $0.08831999999999998\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'我画了一个犯罪率和房价的散点图。'"
+       "'画出了一个犯罪率和房价的散点图。'"
       ]
      },
      "execution_count": 5,
@@ -347,7 +375,9 @@
     }
    ],
    "source": [
-    "agent.run(\"请画一个犯罪率和房价的散点图\")"
+    "# agent.run(\"请画一个犯罪率和房价的散点图\")\n",
+    "question = \"请画一个犯罪率和房价的散点图\"\n",
+    "ask_agent(agent, question)"
    ]
   },
   {
@@ -365,8 +395,8 @@
       "\u001b[32;1m\u001b[1;3mThought: 我应该查看每个特征与房价的相关性\n",
       "Action: python_repl_ast\n",
       "Action Input: df.corr()\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m             CRIM        ZN     INDUS      CHAS       NOX        RM       AGE   \n",
-      "CRIM     1.000000 -0.200469  0.406583 -0.055892  0.420972 -0.219247  0.352734  \\\n",
+      "Observation: \u001b[36;1m\u001b[1;3m             CRIM        ZN     INDUS      CHAS       NOX        RM       AGE  \\\n",
+      "CRIM     1.000000 -0.200469  0.406583 -0.055892  0.420972 -0.219247  0.352734   \n",
       "ZN      -0.200469  1.000000 -0.533828 -0.042697 -0.516604  0.311991 -0.569537   \n",
       "INDUS    0.406583 -0.533828  1.000000  0.062938  0.763651 -0.391676  0.644779   \n",
       "CHAS    -0.055892 -0.042697  0.062938  1.000000  0.091203  0.091251  0.086518   \n",
@@ -397,15 +427,22 @@
       "LSTAT   -0.496996  0.488676  0.543993  0.374044 -0.366087  1.000000 -0.737663  \n",
       "MEDV     0.249929 -0.381626 -0.468536 -0.507787  0.333461 -0.737663  1.000000  \u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3m 我现在知道最终答案\n",
-      "Final Answer: LSTAT特征与房价的相关性最大，相关系数为-0.737663。\u001b[0m\n",
+      "Final Answer: LSTAT 特征与房价相关性最大\u001b[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Answer: LSTAT 特征与房价相关性最大\n",
+      "\n",
+      "Total Tokens: 2821\n",
+      "Prompt Tokens: 2718\n",
+      "Completion Tokens: 103\n",
+      "Successful Requests: 2\n",
+      "Total Cost (USD): $0.05642\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'LSTAT特征与房价的相关性最大，相关系数为-0.737663。'"
+       "'LSTAT 特征与房价相关性最大'"
       ]
      },
      "execution_count": 6,
@@ -414,7 +451,53 @@
     }
    ],
    "source": [
-    "agent.run(\"这十四个特征中，哪个特征与房价相关性最大？\")"
+    "question = \"这十四个特征中，哪个特征与房价相关性最大？\"\n",
+    "ask_agent(agent, question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mThought: 需要使用pandas的groupby函数\n",
+      "Action: python_repl_ast\n",
+      "Action Input: df.groupby(pd.qcut(df['CRIM'], 5))\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f46412e4880>\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m 我现在知道最终答案\n",
+      "Final Answer: df.groupby(pd.qcut(df['CRIM'], 5))\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Answer: df.groupby(pd.qcut(df['CRIM'], 5))\n",
+      "\n",
+      "Total Tokens: 1629\n",
+      "Prompt Tokens: 1533\n",
+      "Completion Tokens: 96\n",
+      "Successful Requests: 2\n",
+      "Total Cost (USD): $0.03258\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"df.groupby(pd.qcut(df['CRIM'], 5))\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"请根据犯罪率将数据集分为五个组, 每个组对应一个dataframe, 请返回分完组的数据\"\n",
+    "ask_agent(agent, question)"
    ]
   }
  ],
