--- a/brower_agent.ipynb
+++ b/brower_agent.ipynb
@@ -58,6 +58,25 @@
     "navigate_tool = tools_by_name[\"navigate_browser\"]\n",
     "get_elements_tool = tools_by_name[\"get_elements\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await navigate_tool.arun({\"url\": \"https://web.archive.org/web/20230428131116/https://www.cnn.com/world\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The browser is shared across tools, so the agent can interact in a stateful manner\n",
+    "await get_elements_tool.arun({\"selector\": \".container__headline\", \"attributes\": [\"innerText\"]})"
+   ]
   }
  ],
  "metadata": {
@@ -76,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
