new file:   models/chat_models/How_to_stream_responses.ipynb 	new file:   models/chat_models/How_to_use_few_shot_examples.ipynb 	new file:   models/chat_models/getting_started.ipynb 	new file:   models/text_embedding_models/OpenAI.ipynb 	modified:   tem.ipynb 	modified:   test/XieChengFlight.ipynb

--- a/test/XieChengFlight.ipynb
+++ b/test/XieChengFlight.ipynb
@@ -58,9 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = Document(page_content=response.text)\n",
-    "md = MarkdownifyHTMLProcessor().process(doc)\n",
-    "md"
+    "# doc = Document(page_content=response.text)\n",
+    "# md = MarkdownifyHTMLProcessor().process(doc)\n",
+    "# md"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(md.page_content)"
+    "# print(md.page_content)"
    ]
   }
  ],
