--- a/tem.ipynb
+++ b/tem.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./models/llms/How_to_stream_LLM_and_Chat_Model_responses.ipynb\n"
+      "./models/text_embedding_models/OpenAI.ipynb\n"
      ]
     }
    ],
@@ -17,7 +17,7 @@
     "# replace space by underscore\n",
     "import os\n",
     "\n",
-    "path_dir = './models/llms'\n",
+    "path_dir = './Indexes/VectorStores'\n",
     "\n",
     "name = input(\"Enter the name of the file: \")\n",
     "\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
