new file:   Indexes/Retrievers/Self-querying_with_Chroma.ipynb 	new file:   Indexes/VectorStores/Chroma.ipynb 	new file:   Indexes/VectorStores/FAISS.ipynb 	new file:   Indexes/VectorStores/getting_started.ipynb 	new file:   Indexes/VectorStores/state_of_the_union.txt 	new file:   Indexes/VectorStores/state_of_the_union.txt:Zone.Identifier 	modified:   requirements.txt 	modified:   tem.ipynb

--- a/tem.ipynb
+++ b/tem.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./models/text_embedding_models/OpenAI.ipynb\n"
+      "./Indexes/Retrievers/Self-querying_with_Chroma.ipynb\n"
      ]
     }
    ],
@@ -17,7 +17,7 @@
     "# replace space by underscore\n",
     "import os\n",
     "\n",
-    "path_dir = './Indexes/VectorStores'\n",
+    "path_dir = './Indexes/Retrievers'\n",
     "\n",
     "name = input(\"Enter the name of the file: \")\n",
     "\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
