modified:   Indexes/Retrievers/Self-querying_with_Chroma.ipynb 	new file:   Indexes/Retrievers/VectorStore.ipynb 	new file:   Indexes/Retrievers/state_of_the_union.txt 	new file:   chains/Getting_Started.ipynb 	new file:   chains/Router_Chains.ipynb 	modified:   tem.ipynb

--- a/Indexes/Retrievers/Self-querying_with_Chroma.ipynb
+++ b/Indexes/Retrievers/Self-querying_with_Chroma.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install lark"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -228,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,14 +235,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query='dinosaur' filter=None\n"
+      "query='dinosaur' filter=None\n",
+      "Total Tokens: 1020\n",
+      "Prompt Tokens: 990\n",
+      "Completion Tokens: 30\n",
+      "Successful Requests: 1\n",
+      "Total Cost (USD): $0.0204\n"
      ]
     },
     {
@@ -263,14 +259,24 @@
        " Document(page_content='Leo DiCaprio gets lost in a dream within a dream within a dream within a ...', metadata={'year': 2010, 'director': 'Christopher Nolan', 'rating': 8.2})]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# This example only specifies a relevant query\n",
-    "retriever.get_relevant_documents(\"what are two movies about dinosaurs\")"
+    "\n",
+    "from langchain.callbacks import get_openai_callback\n",
+    "with get_openai_callback() as cb:\n",
+    "    response = retriever.get_relevant_documents(\"what are two movies about dinosaurs\")\n",
+    "    print(f\"Total Tokens: {cb.total_tokens}\")\n",
+    "    print(f\"Prompt Tokens: {cb.prompt_tokens}\")\n",
+    "    print(f\"Completion Tokens: {cb.completion_tokens}\")\n",
+    "    print(f\"Successful Requests: {cb.successful_requests}\")\n",
+    "    print(f\"Total Cost (USD): ${cb.total_cost}\")\n",
+    "\n",
+    "response"
    ]
   }
  ],
