--- a/tem.ipynb
+++ b/tem.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./Indexes/Retrievers/Self-querying_with_Chroma.ipynb\n"
+      "./chains/Router_Chains.ipynb\n"
      ]
     }
    ],
@@ -17,7 +17,7 @@
     "# replace space by underscore\n",
     "import os\n",
     "\n",
-    "path_dir = './Indexes/Retrievers'\n",
+    "path_dir = './chains'\n",
     "\n",
     "name = input(\"Enter the name of the file: \")\n",
     "\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
