new file:   chains/API_Chains.ipynb 	new file:   chains/Analyze_Document.ipynb 	new file:   chains/LLMRequestsChain.ipynb 	new file:   chains/LLM_Math.ipynb 	new file:   chains/PAL.ipynb 	new file:   chains/state_of_the_union.txt 	modified:   tem.ipynb

--- a/tem.ipynb
+++ b/tem.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./chains/Router_Chains.ipynb\n"
+      "./chains/PAL.ipynb\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
