--- a/chains/PAL.ipynb
+++ b/chains/PAL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ask(question):\n",
-    "    chain = pal_chain.from_math_prompt(llm, verbose=True)\n",
+    "def ask(question, model_name=\"gpt-3.5-turbo\"):\n",
+    "    if model_name != 'gpt-4':\n",
+    "        api_key = \"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\"\n",
+    "    else:\n",
+    "        api_key = \"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\"\n",
+    "    \n",
+    "    print(f\"Using model: {model_name}, api_key: {api_key}\")\n",
+    "    llm = ChatOpenAI(temperature=0, max_tokens=512, model_name=model_name, openai_api_key=api_key)\n",
+    "        \n",
+    "    chain = PALChain.from_math_prompt(llm, verbose=True)\n",
     "    with get_openai_callback() as cb:\n",
     "        response = chain.run(question)\n",
     "        print(f\"Answer: {response}\\n\")\n",
@@ -57,7 +65,8 @@
     "    return response\n",
     "\n",
     "def ask_with_steps(question):\n",
-    "    chain = pal_chain.from_math_prompt(llm, verbose=True, return_intermediate_steps=True)\n",
+    "    llm = ChatOpenAI(temperature=0, max_tokens=512)\n",
+    "    chain = PALChain.from_math_prompt(llm, verbose=True, return_intermediate_steps=True)\n",
     "    with get_openai_callback() as cb:\n",
     "        response = chain({'question': question})\n",
     "        print(f\"Answer: {response}\\n\")\n",
@@ -289,6 +298,229 @@
    ],
    "source": [
     "ask(\"已知a^2 - ab = 1, 求代数式(a-b)^2 + (a+b)(a-b)的值?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new PALChain chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mdef solution():\n",
+      "    \"\"\"Translate the given problem statement and solve for the solution.\"\"\"\n",
+      "    # Translation: In a Cartesian coordinate system, the line l: y = kx - b passes through point P(1,2). \n",
+      "    # What is the solution set for the inequality kx - 2 > b with respect to x?\n",
+      "    \n",
+      "    # We know that the line passes through point P(1,2), so we can substitute these values into the equation of the line:\n",
+      "    # 2 = k(1) - b\n",
+      "    # Rearranging, we get:\n",
+      "    # b = k - 2\n",
+      "    \n",
+      "    # Substituting this into the inequality, we get:\n",
+      "    # kx - 2 > k - 2\n",
+      "    # Simplifying, we get:\n",
+      "    # kx > k\n",
+      "    # Dividing both sides by k (assuming k is positive), we get:\n",
+      "    # x > 1\n",
+      "    \n",
+      "    # Therefore, the solution set for the inequality is x > 1.\n",
+      "    result = \"x > 1\"\n",
+      "    return result\u001b[0m\n",
+      "x > 1\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Answer: x > 1\n",
+      "\n",
+      "Total Tokens: 1370\n",
+      "Prompt Tokens: 1149\n",
+      "Completion Tokens: 221\n",
+      "Successful Requests: 1\n",
+      "Total Cost (USD): $0.0027400000000000002\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'x > 1'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"在平面直角坐标系中, 直线l：y＝kx－b经过点P(1,2)，则关于x的不等式kx-2 > b的解集为\"\n",
+    "\n",
+    "ask(question) # , model_name=\"gpt-4\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using model: gpt-4, api_key: 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\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new PALChain chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mdef solution():\n",
+      "    \"\"\"已知 a^2 - a*b = 1, 求代数式 (a - b)^2 + (a + b)(a - b)的值\"\"\"\n",
+      "    # 根据已知条件，我们可以得到 a^2 - a*b = 1\n",
+      "    # 我们需要求 (a - b)^2 + (a + b)(a - b) 的值\n",
+      "    # 首先展开 (a - b)^2，得到 a^2 - 2ab + b^2\n",
+      "    # 然后展开 (a + b)(a - b)，得到 a^2 - b^2\n",
+      "    # 将两个式子相加，得到 2a^2 - 2ab\n",
+      "    # 根据已知条件，a^2 - a*b = 1，所以 2a^2 - 2ab = 2(a^2 - a*b) = 2 * 1 = 2\n",
+      "    result = 2\n",
+      "    return result\u001b[0m\n",
+      "2\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Answer: 2\n",
+      "\n",
+      "Total Tokens: 1364\n",
+      "Prompt Tokens: 1135\n",
+      "Completion Tokens: 229\n",
+      "Successful Requests: 1\n",
+      "Total Cost (USD): $0.04779\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"已知 a^2 - a*b = 1, 求代数式 (a - b)^2 + (a + b)(a - b)的值\"\n",
+    "\n",
+    "ask(question, model_name=\"gpt-4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using model: gpt-4, api_key: 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\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new PALChain chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mdef solution():\n",
+      "    \"\"\"某商店用2000元购进一批电瓶车头盔，购进后供不应求，被抢购一空，于是，又用6600元再购进一批头盔，第二批头盔的数量是第一批的3倍，但单价比第一批贵2元．第一批头盔进货单价多少元？\"\"\"\n",
+      "    # 设第一批头盔进货单价为x元，数量为y个\n",
+      "    # 则第二批头盔进货单价为x+2元，数量为3y个\n",
+      "    # 根据题意可得方程：\n",
+      "    # xy = 2000\n",
+      "    # (x+2) * 3y = 6600\n",
+      "    # 通过消元法解方程：\n",
+      "    # x = 2000 / y\n",
+      "    # (2000 / y + 2) * 3y = 6600\n",
+      "    # 6000 + 6y = 6600\n",
+      "    # y = 100\n",
+      "    # x = 2000 / 100\n",
+      "    x = 20\n",
+      "    return x\u001b[0m\n",
+      "20\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Answer: 20\n",
+      "\n",
+      "Total Tokens: 1478\n",
+      "Prompt Tokens: 1201\n",
+      "Completion Tokens: 277\n",
+      "Successful Requests: 1\n",
+      "Total Cost (USD): $0.05265\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'20'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"某商店用2000元购进一批电瓶车头盔，购进后供不应求，被抢购一空，于是，又用6600元再购进一批头盔，第二批头盔的数量是第一批的3倍，但单价比第一批贵2元．第一批头盔进货单价多少元？\"\n",
+    "ask(question, model_name=\"gpt-4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using model: gpt-3.5-turbo, api_key: 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\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new PALChain chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mdef solution():\n",
+      "    \"\"\"某商店用2000元购进一批电瓶车头盔，购进后供不应求，被抢购一空，于是，又用6600元再购进一批头盔，第二批头盔的数量是第一批的3倍，但单价比第一批贵2元．若两次购进头盔按同一价格销售，两批全部售完后，获利不少于1000元，那么销售单价至少为多少元？\"\"\"\n",
+      "    cost_first_batch = 2000\n",
+      "    cost_second_batch = 6600\n",
+      "    quantity_first_batch = 1\n",
+      "    quantity_second_batch = 3\n",
+      "    price_difference = 2\n",
+      "    profit_minimum = 1000\u001b[0m\n",
+      "None\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Answer: None\n",
+      "\n",
+      "Total Tokens: 1431\n",
+      "Prompt Tokens: 1238\n",
+      "Completion Tokens: 193\n",
+      "Successful Requests: 1\n",
+      "Total Cost (USD): $0.002862\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'None'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"某商店用2000元购进一批电瓶车头盔，购进后供不应求，被抢购一空，于是，又用6600元再购进一批头盔，第二批头盔的数量是第一批的3倍，但单价比第一批贵2元．若两次购进头盔按同一价格销售，两批全部售完后，获利不少于1000元，那么销售单价至少为多少元？\"\n",
+    "# question = \"A store with 2000 yuan to buy a batch of battery car helmets, after the purchase of short supply, was snapped up, so, and use 6600 yuan to buy a batch of helmets, the number of the second batch of helmets is 3 times that of the first batch, but the unit price is 2 yuan more expensive than the first batch. If the helmet purchased twice is sold at the same price, and the profit is no less than 1000 yuan after the two batches are sold out, then the unit price of sales is at least how much yuan?\"\n",
+    "ask(question)"
    ]
   },
   {
