--- a/chains/PAL.ipynb
+++ b/chains/PAL.ipynb
@@ -46,9 +46,9 @@
    "source": [
     "def ask(question, model_name=\"gpt-3.5-turbo\"):\n",
     "    if model_name != 'gpt-4':\n",
-    "        api_key = \"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\"\n",
+    "        api_key = \"personal_api_key\"\n",
     "    else:\n",
-    "        api_key = \"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\"\n",
+    "        api_key = \"company_api_key\"\n",
     "    \n",
     "    print(f\"Using model: {model_name}, api_key: {api_key}\")\n",
     "    llm = ChatOpenAI(temperature=0, max_tokens=512, model_name=model_name, openai_api_key=api_key)\n",
